--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
   </head>
   <body>
     <div id="navbar-container">
-      <a href="#gallery-container">Art</a>
-      <!-- TODO: Consider adding a "published work" section -->
+      <div id="navbar-content">
+        <a href="#hero-container" id="navbar-logo">Verocayden</a>
+        <div id="navbar-sections">
+          <a href="#hero-container">About</a>
+          <a href="#gallery-container">Artwork</a>
+          <a href="#contact-container">Contact</a>
+          <!-- TODO: Consider adding a "published work" section -->
+        </div>
+      </div>
     </div>
     <div id="hero-container">
       <div id="hero-container-text-content">
