Fixed contact button href + Spacing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           both Western and Easternb inspirations, I want to connect communities
           from coast to coast.
         </p>
-        <button class="contact-button">Contact Me</button>
+        <a href="#contact-container"
+          ><button class="contact-button">Contact Me</button></a
+        >
       </div>
       <img src="assets/profile_picture.png" alt="" id="avatar" />
     </div>
