Changed navbar logo for initials/signature placeholder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="navbar-container">
       <div id="navbar-content">
-        <a href="#hero-container" id="navbar-logo">Verocayden</a>
+        <a href="#hero-container" id="navbar-logo">√C</a>
         <div id="navbar-sections">
           <a href="#hero-container">About</a>
           <a href="#artwork-container">Artwork</a>
