Fixed text visual bug

--- a/index.html
+++ b/index.html
@@ -91,17 +91,15 @@
             <a href="https://www.isekaitouch.com/boutique"
               ><i class="fa-solid fa-book-open"></i>
               <p key="comic1-publisher" class="language">
-                Published in Isekai Touch
+                Published in Isekai Touch #1
               </p>
-              #1</a
-            >
+            </a>
             <a href="https://otakulounge.com/top-10-bourse-manga-2022/"
               ><i class="fa-solid fa-star"></i>
               <p key="comic1-info" class="language">
-                2nd place at O-Taku Manga
+                2nd place at O-Taku Manga Contest 2022
               </p>
-              Contest 2022</a
-            >
+            </a>
           </div>
         </div>
         <div class="comic-container">
@@ -113,10 +111,9 @@
             <a href="https://revueplanches.com/produit/numero-18/"
               ><i class="fa-solid fa-book-open"></i>
               <p key="comic2-publisher" class="language">
-                Published in PLANCHES
+                Published in PLANCHES #18
               </p>
-              #18</a
-            >
+            </a>
           </div>
         </div>
       </div>
