Moved translation into a separate json file

--- a/index.html
+++ b/index.html
@@ -16,17 +16,28 @@
   <body>
     <div id="navbar-container">
       <div id="navbar-content">
-        <a href="#hero-container" id="navbar-logo">√C</a>
+        <a href="index.html#hero-container" id="navbar-logo">√C</a>
         <div id="navbar-sections">
-          <a href="#hero-container" key="nav-about" class="language">About</a>
-          <a href="#artwork-container" key="nav-artwork" class="language"
+          <a href="index.html#hero-container" key="nav-about" class="language"
+            >About</a
+          >
+          <a
+            href="index.html#artwork-container"
+            key="nav-artwork"
+            class="language"
             >Artwork</a
           >
-          <a href="#comics-container" key="nav-comics" class="language"
+          <a
+            href="index.html#comics-container"
+            key="nav-comics"
+            class="language"
             >Comics</a
           >
           <button id="navbar-contact-button">
-            <a href="#contact-container" key="nav-contact" class="language"
+            <a
+              href="index.html#contact-container"
+              key="nav-contact"
+              class="language"
               >Contact</a
             >
           </button>
@@ -48,7 +59,7 @@
           both Western and Eastern inspirations, I want to connect communities
           from coast to coast.
         </p>
-        <a href="#contact-container"
+        <a href="index.html#contact-container"
           ><button class="contact-button" id="hero-contact-button">
             <p key="hero-button" class="language">Contact Me</p>
           </button></a
@@ -166,5 +177,5 @@
       </div>
     </div>
   </body>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </html>
