Added mobile responsive navbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div id="navbar-container">
       <div id="navbar-content">
         <a href="index.html#hero-container" id="navbar-logo">√C</a>
+        <div class="navbar-toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
         <div id="navbar-sections">
           <a href="index.html#hero-container" key="nav-about" class="language"
             >About</a
