--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
 
-    <title>Verocayden</title>
+    <title>Verocayden | Portfolio</title>
   </head>
   <body>
     <div id="navbar-container">
