--- a/index.html
+++ b/index.html
@@ -182,5 +182,5 @@
       </div>
     </div>
   </body>
-  <script type="module" src="script.js"></script>
+  <script type="module" src="./script.js"></script>
 </html>
