Changed the way the form is submitted using event listeners (instead of the pseudo-Angular syntax)

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
         </form>
         <button
           key="send-button"
-          onClick="sendMail()"
           type="submit"
           form="contact-form"
           class="contact-button language"
+          id="send-contact-form-button"
         >
           Send
         </button>
