Made links open in new tab
Interesting reference about security aspects with this approach: https://www.freecodecamp.org/news/how-to-use-html-to-open-link-in-new-tab/

--- a/index.html
+++ b/index.html
@@ -104,13 +104,19 @@
           </div>
           <div class="comic-text-container">
             <h2 key="comic1-title" class="language">Nos Masques (FR)</h2>
-            <a href="https://www.isekaitouch.com/boutique"
+            <a
+              href="https://www.isekaitouch.com/boutique"
+              target="_blank"
+              rel="noopener noreferrer"
               ><i class="fa-solid fa-book-open"></i>
               <p key="comic1-publisher" class="language">
                 Published in Isekai Touch #1
               </p>
             </a>
-            <a href="https://otakulounge.com/top-10-bourse-manga-2022/"
+            <a
+              href="https://otakulounge.com/top-10-bourse-manga-2022/"
+              target="_blank"
+              rel="noopener noreferrer"
               ><i class="fa-solid fa-star"></i>
               <p key="comic1-info" class="language">
                 2nd place at O-Taku Manga Contest 2022
@@ -124,7 +130,10 @@
           </div>
           <div class="comic-text-container">
             <h2 key="comic2-title" class="language">Annuelle (FR)</h2>
-            <a href="https://revueplanches.com/produit/numero-18/"
+            <a
+              href="https://revueplanches.com/produit/numero-18/"
+              target="_blank"
+              rel="noopener noreferrer"
               ><i class="fa-solid fa-book-open"></i>
               <p key="comic2-publisher" class="language">
                 Published in PLANCHES #18
@@ -167,14 +176,22 @@
         <a
           href="https://www.instagram.com/_verocayden_/"
           class="social-media-link"
+          target="_blank"
+          rel="noopener noreferrer"
           ><i class="fa-brands fa-instagram"></i> Instagram</a
         >
-        <a href="https://www.facebook.com/verocayden" class="social-media-link"
+        <a
+          href="https://www.facebook.com/verocayden"
+          class="social-media-link"
+          target="_blank"
+          rel="noopener noreferrer"
           ><i class="fa-brands fa-facebook"></i> Facebook</a
         >
         <a
           href="https://www.youtube.com/@verocayden502/featured"
           class="social-media-link"
+          target="_blank"
+          rel="noopener noreferrer"
           ><i class="fa-brands fa-youtube"></i> YouTube</a
         >
       </div>
